--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <!-- Onglet Invocation -->
         <div id="invocation" class="tab-content active">
-            <h1>🎲 Gacha System</h1>
+            <h1>🎲 Invocation de Personnages</h1>
             
             <div class="stats">
                 <div class="stat">
@@ -61,7 +61,7 @@
 
             <div class="summon-cost-info">
                 <p>💎 <strong>10 Cristaux</strong> requis pour une invocation x10</p>
-                <p>⚠️ Les cristaux sont rares ! Farmez intensivement dans la Forêt !</p>
+                <p>⚠️ Les cristaux sont rares ! Farmez intensivement !</p>
             </div>
 
             <button class="summon-btn" id="summonBtn">
@@ -110,9 +110,7 @@
             </div>
 
             <div class="collection-grid" id="collectionGrid"></div>
-            
-            <button class="reset-btn" id="resetBtn">Réinitialiser la collection</button>
-        </div>
+    </div>
 
         <!-- Onglet Combat -->
         <div id="combat" class="tab-content">
