--- a/index.html
+++ b/index.html
@@ -114,9 +114,8 @@
             </div>
 
             <div class="collection-grid" id="collectionGrid"></div>
-        </div>
+    </div>
 
-        <!-- Onglet Equipment -->
         <div id="equipment" class="tab-content">
             <h1>⚔️ Teams Equipment</h1>
             
@@ -142,7 +141,6 @@
                 </div>
             </div>
         </div>
-
         <!-- Onglet Combat -->
         <div id="combat" class="tab-content">
             <h1>⚔️ Campaign</h1>
@@ -227,7 +225,6 @@
             </div>
         </div>
     </div>
-
     <!-- Modal d'inventaire -->
     <div id="inventoryModal" class="inventory-modal">
         <div class="inventory-modal-content">
@@ -250,11 +247,10 @@
             </div>
         </div>
     </div>
-
     <!-- Notification de sauvegarde -->
     <div id="saveNotification" class="save-notification"></div>
 
-    <!-- JavaScript - ORDRE IMPORTANT -->
+    <!-- JavaScript -->
     <script src="config/game-config.js"></script>
     <script src="js/data/characters.js"></script>
     <script src="js/utils/helpers.js"></script>
@@ -264,8 +260,6 @@
     <script src="js/modules/combat.js"></script>
     <script src="js/modules/collection.js"></script>
     <script src="js/modules/equipment.js"></script>
-    <!-- NOUVEAU SYSTÈME D'ÉQUIPEMENT V2 -->
-    <script src="js/modules/equipment-v2.js"></script>
     <script src="js/modules/shop.js"></script>
     <script src="js/main.js"></script>
 </body>
