--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,29 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mon Jeu HTML/JS</title>
-  <link rel="stylesheet" href="../css/styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>WoW-Idle</title>
+  <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
-  <div id="game-container">
-    <!-- Le canvas ou le conteneur de votre jeu -->
+  <div id="game">
+    <h1>WoW-Idle</h1>
+    <div class="stats">
+      <div>XP : <span id="xp">0</span></div>
+      <div>Niveau : <span id="level">1</span></div>
+      <div>XP pour niveau suivant : <span id="nextXp">10</span></div>
+    </div>
+    <button id="clickXp">Clique pour XP</button>
+    <div class="upgrades">
+      <h2>Améliorations</h2>
+      <button class="upgrade" id="idleUpgrade">
+        +1 XP/sec (coût : <span class="cost" id="idleCost">20</span> XP)
+      </button>
+      <button class="upgrade" id="clickUpgrade">
+        +1 XP/clic (coût : <span class="cost" id="clickCost">50</span> XP)
+      </button>
+    </div>
   </div>
-  <script src="../js/main.js"></script>
+  <script src="../scripts/main.js"></script>
 </body>
 </html>
