--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>WoW-Idle</title>
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
   <div id="game">
@@ -25,6 +25,6 @@
       </button>
     </div>
   </div>
-  <script src="../js/main.js"></script>
+  <script src="../java/main.js"></script>
 </body>
 </html>
