--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
             grid-template-columns: 1fr 420px;
             gap: 24px;
             margin-bottom: 24px;
-            height: calc(100vh - 200px);
             min-height: 600px;
         }
 
@@ -137,8 +136,8 @@
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
             gap: 16px;
+            max-height: 70vh;
             overflow-y: auto;
-            flex: 1;
         }
 
         .hero-card {
