--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            cursor: default !important;
+            user-select: none;
+            -webkit-user-select: none;  /* Safari */
+            -moz-user-select: none;     /* Firefox */
+            -ms-user-select: none;      /* IE/Edge */
         }
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            cursor: default;            /* Force le curseur par défaut */
             background: #0a0e1a;
             color: #e8e8e8;
             min-height: 100vh;
