--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boss Battle - Team Composition</title>
+    <title>Infernal WoW</title>
     <style>
         * {
             margin: 0;
@@ -17,15 +17,15 @@
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Ebrima', Tahoma, Geneva, Verdana, sans-serif;
             cursor: default;            /* Force le curseur par défaut */
             background: #0a0e1a;
             color: #e8e8e8;
             min-height: 100vh;
             padding: 20px;
             background-image: 
-                radial-gradient(circle at 25% 25%, #1a237e 0%, transparent 50%),
-                radial-gradient(circle at 75% 75%, #4a148c 0%, transparent 50%);
+                radial-gradient(circle at 25% 25%, #2a2a31 0%, transparent 50%),
+                radial-gradient(circle at 75% 75%, #272629 0%, transparent 50%);
         }
 
         .container {
@@ -70,9 +70,11 @@
         }
 
         .panel-header {
-            background: linear-gradient(90deg, #2d2d44 0%, #3a3a54 100%);
+            background: linear-gradient(135deg, #2d2d44 0%, #3a3a54 100%);
             padding: 16px 20px;
-            border-bottom: 1px solid #3d3d5c;
+            border: 1px solid #3d3d5c;
+            border-top-right-radius: 12px;
+            border-top-left-radius: 12px;
         }
 
         .panel-title {
@@ -233,7 +235,7 @@
         }
 
         .team-slot.filled {
-            border: 2px solid #10b981;
+            border: 2px solid #8ff5d3;
             background: linear-gradient(135deg, #064e3b 0%, #065f46 100%);
             border-style: solid;
             align-items: stretch;
@@ -257,7 +259,7 @@
         }
 
         .remove-btn {
-            background: #dc2626;
+            background: #dc26269d;
             color: white;
             border: none;
             padding: 6px 12px;
@@ -290,7 +292,7 @@
         }
 
         .hp-fill {
-            background: linear-gradient(90deg, #dc2626, #f59e0b, #10b981);
+            background:#10b981;
             height: 100%;
             transition: width 0.3s ease;
             border-radius: 3px;
@@ -314,8 +316,8 @@
 
         .synergy-panel {
             background: linear-gradient(135deg, #1e1e2e 0%, #2a2a3e 100%);
-            border: 1px solid #3d3d5c;
-            border-radius: 12px;
+            border: 2px solid #3d3d5c;
+            border-radius: 15px;
         }
 
         .synergy-content {
@@ -644,7 +646,7 @@
         }
 
         .status-hp-fill {
-            background: linear-gradient(90deg, #dc2626, #f59e0b, #10b981);
+            background:#10b981;
             height: 100%;
             transition: width 0.3s ease;
             border-radius: 4px;
@@ -936,7 +938,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="title">⚔️ Boss Battle Arena</div>
+            <div class="title">⚔️ Infernal WoW</div>
             <div class="subtitle">Assemble your team and face the ultimate challenge</div>
         </div>
         
@@ -1042,7 +1044,7 @@
         
         <div class="combat-section">
             <div class="boss-display">
-                <div class="boss-name">🐲 Deathwing the Destroyer</div>
+                <div class="boss-name">🐲 LFG Players</div>
                 <div class="boss-hp-text">HP: <span id="bossHp">1000000</span> / 1000000</div>
                 <div class="boss-hp-bar">
                     <div class="boss-hp-fill" id="hpFill" style="width: 100%"></div>
@@ -1098,7 +1100,7 @@
             "Beast Mastery": {
                 name: "🐺 Beast Mastery", 
                 description: "Invoque une attaque de familier (dégâts bonus)",
-                cooldown: 3,
+                cooldown: 2,
                 type: "damage",
                 effect: (hero, heroState) => ({
                     damage: hero.attack * 0.8,
@@ -1118,7 +1120,7 @@
             "Divine Shield": {
                 name: "🛡️ Divine Shield",
                 description: "Protège contre les 2 prochaines attaques",
-                cooldown: 6,
+                cooldown: 5,
                 type: "self_buff",
                 effect: (hero, heroState) => ({
                     type: "buff",
@@ -1133,20 +1135,20 @@
                 cooldown: 4,
                 type: "team_heal",
                 effect: (hero, heroState) => ({
-                    healAmount: 0.3,
+                    healAmount: 0.4,
                     message: "✨ Lumière curative!"
                 })
             },
             "Shadow Magic": {
                 name: "🌑 Shadow Magic",
-                description: "Applique poison (20 dégâts/tour pendant 4 tours)",
+                description: "Applique poison (40 dégâts/tour pendant 4 tours)",
                 cooldown: 5,
                 type: "debuff",
                 effect: (hero, heroState) => ({
                     type: "debuff",
                     name: "Poison",
                     duration: 4,
-                    effect: { poison: 20 }
+                    effect: { poison: 40 }
                 })
             }
         };
@@ -1175,7 +1177,7 @@
             { name: "Gorath Ironwall", role: "Paladin", attack: 120, speed: 60, crit: 18, hp: 920, def: 58, special: "Divine Shield" }
         ];
 
-        // Game variables (VOTRE CODE ORIGINAL)
+        // Game variables 
         let selectedTeam = [];
         let filteredHeroes = [...heroes];
         let teamHeroStates = [];
@@ -1192,7 +1194,7 @@
             turn: 0 // NOUVEAU pour le système de tours
         };
 
-        // Synergies (VOTRE CODE ORIGINAL)
+        // Synergies 
         const synergies = {
             "Warrior's Might": { roles: ["Warrior"], minCount: 3, bonus: "ATK +20%" },
             "Hunter's Mark": { roles: ["Hunter"], minCount: 2, bonus: "CRIT +10%" },
@@ -1392,7 +1394,7 @@
             }
         }
 
-        // Initialization (VOTRE CODE ORIGINAL)
+        // Initialization
         function init() {
             applyFilters();
             renderTeamSlots();
