Inventory sytem and premade loot

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <span class="tab-icon">🗺️</span>
                     <span class="tab-text">World Map</span>
                 </button>
-                <button class="nav-tab disabled" data-tab="inventory">
+                <button class="nav-tab" data-tab="inventory">
                     <span class="tab-icon">🎒</span>
                     <span class="tab-text">Inventory</span>
                 </button>
@@ -74,6 +74,8 @@
             </div>
         </main>
     </div>
+    <script src="data.js"></script>
+    <script src="inventory.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
