--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         </main>
     </div>
     <script src="data.js"></script>
+    <script src="loot.js"></script>
     <script src="inventory.js"></script>
     <script src="main.js"></script>
 </body>
